# cppints2

./: CMakeLists.txt  LICENSE  Makefile  README.md
src/: main.cpp  note
src/basic/debug/: Makefile  test.cpp
src/general/: CMakeLists.txt  readme
src/general/debug/: test.cpp
src/general/include/: basisutil.h  general.h  integral.h  jdigestion.h  kdigestion.h  shell.h  shellquartet.h
src/general/src/: jdigestion.cpp  kdigestion.cpp  shellquartet.cpp
src/types/debug/: Makefile
util/fmt_test/: compile.txt  fmt_test_down.cpp  fmt_test_expansion.cpp  fmt_test_up.cpp
